# darknet-cpp

./: CMakeLists.txt  README.md
darknet/: CMakeLists.txt
darknet/include/: activation_layer.h  activations.h  avgpool_layer.h  batchnorm_layer.h  blas.h  box.h  classifier.h  col2im.h  connected_layer.h  convolutional_layer.h  cost_layer.h  crnn_layer.h  crop_layer.h  cuda.h  darknet.h  data.h  deconvolutional_layer.h  detection_layer.h  dropout_layer.h  gemm.h  gru_layer.h  im2col.h  image.h  l2norm_layer.h  layer.h  list.h  local_layer.h  logistic_layer.h  lstm_layer.h  matrix.h  maxpool_layer.h  network.h  normalization_layer.h  option_list.h  parser.h  region_layer.h  reorg_layer.h  rnn_layer.h  route_layer.h  shortcut_layer.h  (+5 more)
darknet/src/: activation_layer.cpp  avgpool_layer.cpp  batchnorm_layer.cpp  blas.cpp  box.cpp  classifier.cpp  coco.cpp  connected_layer.cpp  convolutional_layer.cpp  cost_layer.cpp  crnn_layer.cpp  crop_layer.cpp  cuda.cpp  data.cpp  deconvolutional_layer.cpp  detection_layer.cpp  dropout_layer.cpp  gemm.cpp  gru_layer.cpp  image.cpp  l2norm_layer.cpp  layer.cpp  local_layer.cpp  logistic_layer.cpp  lstm_layer.cpp  matrix.cpp  maxpool_layer.cpp  network.cpp  nightmare.cpp  normalization_layer.cpp  option_list.cpp  parser.cpp  region_layer.cpp  reorg_layer.cpp  rnn_layer.cpp  route_layer.cpp  shortcut_layer.cpp  softmax_layer.cpp  tree.cpp  upsample_layer.cpp  (+2 more)
